# news-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  dashboard.py  pyproject.toml
config/: concept_uris.yaml  config.yaml  feeds.yaml  query_buckets.yaml  relevance.yaml  topic_queries.yaml  watchlists.yaml
deploy/: README.md  news-agent.service  news-dashboard.service  setup-ec2.sh
scripts/: inoreader_oauth_bootstrap.py  probe_claude_research.py  reset_db.py  resolve_concept_uris.py
src/news_agent/: __main__.py  agent.py  ai_classifier.py  ai_email.py  budget.py  classifier.py  config.py  curator.py  digest.py  inoreader_oauth.py  logging_setup.py  mailer.py  query_builder.py  relevance.py  scheduler.py  similarity.py  store.py  summarizer.py
src/news_agent/sources/: base.py  claude_research.py  inoreader.py  newsapi.py  nikkei.py  rss.py
tests/: test_ai_classifier.py  test_ai_email.py  test_budget.py  test_canonicalize.py  test_classifier.py  test_claude_research.py  test_curator.py  test_digest.py  test_feeds_loader.py  test_inoreader_oauth.py  test_inoreader_source.py  test_mailer.py  test_newsapi.py  test_p1_batch.py  test_query_builder.py  test_recency.py  test_relevance.py  test_similarity.py  test_sources_nikkei.py  test_store_dedup.py  test_summarizer.py  test_topic_queries.py
